fix on mobile devices

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,7 @@ a {
 }
 
 .menu {
+   visibility: hidden;
    float: left;
    width: 30%;
    text-align: left;
